<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.danieljameswilson.fakechat.MainActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        android:textSize="30sp"
        android:textColor="@color/primary_text"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:inputType="textPersonName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/primary_light"
        android:layout_marginTop="50dp"
        android:id="@+id/usernameEditText"
        android:textSize= "24sp"
        android:padding="10dp"
        android:hint="@string/loginHint"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/primary_light"
        android:layout_marginTop="10dp"
        android:id="@+id/passwordEditText"
        android:textSize= "24sp"
        android:padding="10dp"
        android:hint="@string/passwordHint"
        android:imeOptions="actionNext"/>

    <Button
        android:text="@string/buttonText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:id="@+id/loginButton"
        android:textSize= "24sp"
        android:padding="10dp"
        android:background="@drawable/button_click_login"
        android:textColor="@color/icons"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:text="@string/register"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:id="@+id/registerButton"
        android:textSize= "12sp"
        android:padding="10dp"
        android:background="@drawable/button_click_register"
        android:textColor="@color/icons"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/errorTextView"
        android:textSize="16sp"
        android:textColor="@color/error"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/versionTextView"
        android:textSize= "14sp"
        android:textColor="@color/primary_text"/>

</RelativeLayout>
