<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.danieljameswilson.fakechat.MainActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_room"
        android:textSize="30sp"
        android:textColor="@color/primary_text"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    <Button
        android:text="@string/chatrooma"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:id="@+id/chat_room_a"
        android:textSize= "24sp"
        android:padding="10dp"
        android:background="@drawable/button_click_login"
        android:textColor="@color/icons"
        android:layout_below="@+id/please"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:text="@string/chatroomb"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:id="@+id/chat_room_b"
        android:textSize= "24sp"
        android:padding="10dp"
        android:background="@drawable/button_click_login"
        android:textColor="@color/icons"
        android:layout_below="@+id/chat_room_a"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>